--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
-				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', 'pink'],
+				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#1bbc9b'],
 				anchors: ['page1', 'page2', 'page3', 'page4'],
 				menu: '#menu',
 				css3: true,
@@ -75,6 +75,7 @@
         		});
         });
     </script>
+    <!-- no need google map now.
 	<script type="text/javascript">
 		var centerPos=new google.maps.LatLng(44.0147149,1.588451);
 		var chateauPos=new google.maps.LatLng(44.002477,1.688451);
@@ -96,6 +97,7 @@
 		}
 		google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
+	-->
 </head>
 <body>
 	<ul id="menu" class="ui-menu">
@@ -207,8 +209,7 @@
 					<p class="langZH">
 						静，燕赵人士，曰静而喜动，喜欢小动物，伶俐而亲切。
 					</p>
-					<p class="langEN">
-					</p>
+					
 				</div>
 				<div class="col-md-6">
 					<h2 class="langFR">Hao</h2>
@@ -220,8 +221,7 @@
 					<p class="langZH">
 						浩，齐鲁人士，尊儒重道，喜欢散文那行云流水般的惬意，擅长变静为动。
 					</p>
-					<p class="langEN">
-					</p>
+					
 				</div>
 			</div>
 		</div>
@@ -239,8 +239,7 @@
 						<p class="langZH">
 							2005年，我们一起踏入交大的校门，记忆中是那个大大的拖鞋还有那只展翅欲飞的雄鹰，还有那走不完的闵大荒。跟小伙伴们一起坐在最后一排打瞌睡的我，认识了永远坐在第一排的妳。我们都记得你的名字--“学霸”。妳也记得我们的名字：技术宅男。
 						</p>
-						<p class="langEN">
-						</p>
+						
 					</div>
 				</div>
 			</div>
@@ -248,17 +247,19 @@
 		<div class="slide" id="slide2">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-6">
-						<img src="eagle.jpg" class="img-rounded img-responsive">
+					<div class="col-md-4">
+						<img src="louvre.jpg" class="img-rounded img-responsive">
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-4">
+						<img src="xuhui.jpg" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-4">
 						<p class="langFR">
 						</p>
 						<p class="langZH">
 							2009年，妳跟小伙伴们在法国欢声笑语，感受着杜埃的那份宁静与快乐。我踌躇满志踏上了人生第一段职业历程，体会了激情，希望，伤心与失落。
 						</p>
-						<p class="langEN">
-						</p>
+						
 					</div>
 				</div>
 			</div>
@@ -275,8 +276,7 @@
 						<p class="langZH">
 							2011年，妳回到了交大，我也回到了交大。妳继续妳的学业，我去寻找我曾经的梦想。我们再一次认识对方，拥有了彼此真正的名字。我鼓起勇气，拉起妳的手，一起踏上追梦的路程。每个周末陪着妳玩Matlab，看美剧，吃食堂，准备GEM考试。
 						</p>
-						<p class="langEN">
-						</p>
+						
 					</div>
 				</div>
 			</div>
@@ -293,8 +293,7 @@
 						<p class="langZH">
 							2012年，陪伴妳坐在思源湖边，一起毕业。
 						</p>
-						<p class="langEN">
-						</p>
+						
 					</div>
 				</div>
 			</div>
@@ -302,131 +301,219 @@
 		<div class="slide" id="slide5">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-5">
 						<img src="paris.jpg" class="img-rounded img-responsive">
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-4">
+						<img src="galcon.jpg" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-3">
 						<p class="langFR">
 						</p>
 						<p class="langZH">
 							2012年10月，经历过无数让我习以为常的波折后，我们成功在巴黎会师啦。
-						</p>
-						<p class="langEN">
 						</p>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="slide" id="slide6">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h3 class="langFR">2012-3</h3>
-						<h1 class="langZH">第一次离别，痛彻心扉。经过两个月“漫长”的异地煎熬，你也顺利来到法国和我会师，我们开始新篇章的第一步</h1>
-					</div>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="montagne.jpg" class="img-rounded img-responsive">
+				</div>
+				<div class="col-md-4">
+					<img src="model.jpg" class="img-rounded img-responsive">
+				</div>
+				<div class="col-md-4">
+					<p class="langFR">
+					</p>
+					<p class="langZH">
+						2012年12月，我们开始欧洲旅行。
+					</p>
 				</div>
 			</div>
 		</div>
 		<div class="slide" id="slide7">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h3 class="langFR">2013-1</h3>
-						<h1 class="langZH">饱受异地折磨，终于可以趁实习时暂时在一起。</h1>
-					</div>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="spain.jpg" class="img-rounded img-responsive">
+				</div>
+				<div class="col-md-4">
+					<img src="plage.jpg" class="img-rounded img-responsive">
+				</div>
+				<div class="col-md-4">
+					<p class="langFR">
+					</p>
+					<p class="langZH">
+						2013年6月，我开始在图鲁兹实习，我没天坐着火车奔波与两个城市间，为了每天都能回家见到妳。
+					</p>
 				</div>
 			</div>
 		</div>
 		<div class="slide" id="slide8">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h3 class="langFR">2013-2</h3>
-						<h1 class="langZH">那个晴朗的夏日，我们在湖里蹬着脚踏船，嬉笑打闹。</h1>
-					</div>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="jean-luc.jpg" class="img-rounded img-responsive">
+				</div>
+				<div class="col-md-4">
+					
+				</div>
+				<div class="col-md-4">
+					<p class="langFR">
+					</p>
+					<p class="langZH">
+						2013年7月，我们走入黑山避暑。
+					</p>
 				</div>
 			</div>
 		</div>
 		<div class="slide" id="slide9">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h3 class="langFR">2013-3</h3>
-						<h1 class="langZH">第一次离别，痛彻心扉。经过两个月“漫长”的异地煎熬，你也顺利来到法国和我会师，我们开始新篇章的第一步</h1>
-					</div>
+			<div class="row">
+				<div class="col-md-4">
+					
 				</div>
-			</div>
-		</div>
-		<div class="slide" id="slide10">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h3 class="langFR">2014-1</h3>
-						<h1 class="langZH">2012年 陪你走过毕业季，也穿着硕士服再做次同学</h1>
-					</div>
+				<div class="col-md-4">
+					
 				</div>
-			</div>
-		</div>
-		<div class="slide" id="slide11">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h3 class="langFR">2014-2</h3>
-						<h1 class="langZH">之后我密集的学法语和办签证，你也煞费苦心的开始申请学校。发生了很多事情</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="slide" id="slide12">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h3 class="langFR">2014-3</h3>
-						<h1 class="langZH">第一次离别，痛彻心扉。经过两个月“漫长”的异地煎熬，你也顺利来到法国和我会师，我们开始新篇章的第一步</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="slide" id="slide13">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h1>2015</h1>
-						<h3 class="langZH">从2005年在美丽的交大校园相遇到2015年，我们已有十年的人生轨迹重合，而这只是开始。</h3>
-						<h3 class="langZH">我们结婚了！邀请亲朋好友分享我们的喜悦。</h3>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="slide" id="slide14">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<h1 class="langFR">Futur</h1>
-						<h1 class="langZH">拉紧的手从此不放开。未来的每一天，我都与你同在。</h1>
-					</div>
+				<div class="col-md-4">
+					<p class="langFR">
+					</p>
+					<p class="langZH">
+						未来，我们一起创造。
+					</p>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="section" id="section4">
-		<div>
-			<h1>Programme</h1>
+		<div class="slide" id="slide_mairie">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1 class="langFR">
+							Cérémonie dans l'hotel de ville
+						</h1>
+						<h1 class="langZH">
+							Castres政府大厅仪式
+						</h1>
+						<br>
+					</div>
+					<div class="col-md-4">
+						<img src="mairie.png" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-4">
+						<p class="langZH"><strong>地址：</strong> 1 Chemin de la Poudrerie, 81100 Catres</p>
+						<p class="langFR"><strong>Adresse：</strong> 1 Chemin de la Poudrerie, 81100 Catres</p>
+						<p class="langZH"><strong>时间：</strong> 15点</p>
+						<p class="langFR"><strong>Heure：</strong> 15h00</p>
+					</div>
+					<div class="col-md-4">
+						<h4 class="langZH">Castres火车站</h4>
+						<h4 class="langFR">Gare de Catres</h4>
+						<img src="castres_gare.jpg" class="img-rounded img-responsive">
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-4">
-          			<h2 class="pull-left">Adresse</h2>
-					<div id="googleMap" style="width:450px;height:380px;"></div>
-				 </div>
-				 <div class="col-md-4">
-          			<h2 class="pull-left">Schedule</h2>
-          			
-				 </div>
-				 <div class="col-md-4">
-          			<h2 class="pull-left">Liste des cadeaux</h2>
-          			
-				 </div>
+		<div class="slide" id="slide_cadeaux">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1 class="langFR">
+							Achat des cadeaux chez Darty
+						</h1>
+						<h1 class="langZH">
+							去Darty购买礼物
+						</h1>
+					</div>
+					<div class="col-md-4">
+						<p class="langZH"><strong>地址：</strong> 12 Rue Albert Calmettes, 81100 Castres</p>
+						<p class="langFR"><strong>Adresse：</strong> 12 Rue Albert Calmettes, 81100 Castres</p>
+						<p class="langZH"><strong>时间：</strong> 16点</p>
+						<p class="langFR"><strong>Heure：</strong> 16h00</p>
+						<img src="darty.png" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-8">
+						<h2 class="langFR">Liste des Cadeaux</h2>
+						<h2 class="langZH">礼物清单</h2>
+						<table class="table table-striped table-bordered">
+							<thead>
+								<tr>
+									<th class="langFR">Cadeaux</th>
+									<th class="langZH">礼物</th>
+									<th class="langFR">Donneur</th>
+									<th class="langZH">赠送者</th>
+									<th class="langFR">Prix</th>
+									<th class="langZH">价格</th>
+								</tr>
+							</thead>
+							<tbody>
+								<% for(var i=0; i<presents.length; i++) { %>
+									<tr>
+										<td  class="langZH"><%= presents[i].nameZH %></td>
+										<td  class="langFR"><%= presents[i].nameFR %></td>
+										<td>Anonyme</td>
+										<td><%= presents[i].price %></td>
+									</tr>
+								<% } %>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="slide" id="slide_dinner">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1 class="langFR">
+							Le repas et la soirée dans le Château de la Vère
+						</h1>
+						<h1 class="langZH">
+							城堡晚宴及晚会
+						</h1>
+						<br>
+					</div>
+					<div class="col-md-4">
+						<p class="langZH"><strong>地址：</strong> 北纬 44.0040706, 东经 1.7122476</p>
+						<p class="langFR"><strong>Adresse：</strong> 44.0040706 N, 1.7122476 E</p>
+						<p class="langZH"><strong>时间：</strong> 18点</p>
+						<p class="langFR"><strong>Heure：</strong> 18h00</p>
+					</div>
+					<div class="col-md-4">
+						<img src="chateau-de-la-vere.jpg" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-4">
+						<img src="salle.jpg" class="img-rounded img-responsive">
+					</div>
+									
+				</div>
+			</div>
+		</div>
+		<div class="slide" id="slide_barbecue">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1 class="langFR">
+							Le Barbecue dans le jardin
+						</h1>
+						<h1 class="langZH">
+							花园烧烤
+						</h1>
+						<br>
+					</div>
+					<div class="col-md-4">
+						<p class="langZH"><strong>时间：</strong> 翌日10点</p>
+						<p class="langFR"><strong>Heure：</strong> lendemain 10h00 </p>
+					</div>
+					<div class="col-md-4">
+						<img src="jardin.jpg" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-4">
+						
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
