--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -70,7 +70,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<!--DONE: a form to add a new invitee -->
-					<h2>Add a new invitee:</h2>
+					<h2>Add/Modify a new invitee:</h2>
 					<form role="form" method="post" action="/addInvitee">
 						<div class="form-group">
 							<label for="id" class="hide">id</label>
