--- a/views/present.ejs
+++ b/views/present.ejs
@@ -42,7 +42,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<!--DONE: a form to add a new present -->
-					<h2>Add a new present:</h2>
+					<h2>Add/Modify a new present:</h2>
 					<form class="form-inline" method="post" action="/addPresent">
 						<div class="form-group">
 							<label for="id" class="hide">id</label>
