--- a/views/index.ejs
+++ b/views/index.ejs
@@ -281,7 +281,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-6">
-						<img src="lake.jpg" class="img-rounded img-responsive">
+						<img src="canvas_1.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
@@ -316,10 +316,10 @@
 		<div class="slide" id="slide6">
 			<div class="row">
 				<div class="col-md-4">
-					<img src="montagne.jpg" class="img-rounded img-responsive">
+					<img src="canvas_3.jpg" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-4">
-					<img src="model.jpg" class="img-rounded img-responsive">
+					<img src="canvas_4.jpg" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-4">
 					<p class="langFR">
@@ -336,7 +336,7 @@
 					<img src="spain.jpg" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-4">
-					<img src="plage.jpg" class="img-rounded img-responsive">
+					<img src="canvas_2.jpg" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-4">
 					<p class="langFR">
@@ -399,8 +399,8 @@
 						<img src="mairie.png" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
-						<p class="langZH"><strong>地址：</strong> 1 Chemin de la Poudrerie, 81100 Catres</p>
-						<p class="langFR"><strong>Adresse：</strong> 1 Chemin de la Poudrerie, 81100 Catres</p>
+						<p class="langZH"><strong>地址：</strong> 1 Rue de l'Hôtel de ville, 81100 Castres</p>
+						<p class="langFR"><strong>Adresse：</strong> 1 Rue de l'Hôtel de ville, 81100 Castres</p>
 						<p class="langZH"><strong>时间：</strong> 15点</p>
 						<p class="langFR"><strong>Heure：</strong> 15h00</p>
 					</div>
@@ -449,7 +449,7 @@
 									<tr>
 										<td  class="langZH"><%= presents[i].nameZH %></td>
 										<td  class="langFR"><%= presents[i].nameFR %></td>
-										<td>Anonyme</td>
+										<td><%= presents[i].inviteeName %></td>
 										<td><%= presents[i].price %></td>
 									</tr>
 								<% } %>
