--- a/views/present.ejs
+++ b/views/present.ejs
@@ -20,7 +20,9 @@
 								<th>Chinese Name</th>
 								<th>French Name</th>
 								<th>Price</th>
+								<th class='hide'>inviteeId</th>
 								<th>AssignedInvitee</th>
+								<th>DeassignInvitee</th>
 								<th></th> <!-- Modify -->
 								<th></th> <!-- Delete -->
 							</tr>
@@ -32,7 +34,13 @@
 									<td><%= presents[i].nameZH %></td>
 									<td><%= presents[i].nameFR %></td>
 									<td><%= presents[i].price %></td>
-									<td><%= presents[i].inviteeId %></td>
+									<td class='hide'><%= presents[i].inviteeId %></td>
+									<td><%= presents[i].inviteeName %></td>
+									<td>
+										<% if(presents[i].inviteeId) { %>
+											<input type="button" onclick="location.href ='/deassign?inviteeId=<%= presents[i].inviteeId %>&presentId=<%= presents[i]._id %>'" value="Deassign">
+										<% } %>
+									</td>
 									<td><input type="button" onclick="updatePresent(<%= i %>)" value="Modify"></td>
 									<td><input type="button" onclick="location.href ='/removePresent?id=<%= presents[i]._id%>'" value="Delete"></td>
 								</tr>
