all functions are finished

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -83,7 +83,7 @@
 				<div class="col-md-4">
 					<!--DONE: a form to add a new invitee -->
 					<h2>Add/Modify a new invitee:</h2>
-					<form role="form" method="post" action="/addInvitee">
+					<form class="form-inline" method="post" action="/addInvitee">
 						<div class="form-group">
 							<label for="id" class="hide">id</label>
 							<input type="text" id="id" class="form-control hide" name="id" value="">
