--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html">
   <meta name="author" content="Jungle">
-  <title>Mariage de Jing et Hao</title>
+  <title>Jing et Hao</title>
   	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css">
 	<link rel="stylesheet" type="text/css" href="mariage.css">
@@ -199,25 +199,40 @@
 	<div class="section" id="section2">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-5 col-md-offset-1">
 				
 					<img src="jingPortait.png" class="img-circle">
-					<p class="langFR">
-					</p>
-					<p class="langZH">
+					<h4 class="langFR">
+						Jing vient de Province de Hebei, Handan. Elle est dotée un prénom qui signfie "calme" en chinois mais adore bouger et les sports.
+					</h4>
+					<h4 class="langZH">
+					<strong>
 						静，燕赵人士，曰静而喜动，喜欢小动物，伶俐而亲切。
-					</p>
+					</strong>
+					</h4>
 					
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-5">
 				
 					<img src="haoPortait.png" class="img-circle">
+					<h4 class="langFR">
+						Hao vient de Province de Shandong, Guangrao. Il était trampé dans l'ambiance de Confucius et est bon de faire changement du "calme" au "mouvement"
+					</h4>
+					<h4 class="langZH">
+					<strong>
+						浩，齐鲁人士，尊儒重道，喜欢散文那行云流水般的惬意，擅长变静为动。
+					</strong>
+					</h4>
+					
+				</div>
+				
+				<div class="col-md-6 col-md-offset-5">
 					<p class="langFR">
+						Nous avons vécus notre chemin ensemble pour 1500 jours.
 					</p>
 					<p class="langZH">
-						浩，齐鲁人士，尊儒重道，喜欢散文那行云流水般的惬意，擅长变静为动。
+						我们在一起已有1500天.
 					</p>
-					
 				</div>
 			</div>
 		</div>
@@ -227,10 +242,12 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-6">
-						<img src="eagle.jpg" class="img-rounded img-responsive">
+						<img src="sjtuportail1.jpg" class="img-rounded img-responsive">
 					</div>
+				
 					<div class="col-md-6">
 						<p class="langFR">
+							Nous sommes entrés dans la même université ensemble en 2005. Là, derrière le grand portail à la forme 'Tong' de l'Université Jiao Tong de Shanghai, je te connais. Comme toujours j'assis au fond de la salle avec mes copains, bâillai, et toi toujours près de l'estrade.
 						</p>
 						<p class="langZH">
 							2005年，我们一起踏入交大的校门，记忆中是那个大大的拖鞋还有那只展翅欲飞的雄鹰，还有那走不完的闵大荒。跟小伙伴们一起坐在最后一排打瞌睡的我，认识了永远坐在第一排的妳。我们都记得你的名字--“学霸”。妳也记得我们的名字：技术宅男。
@@ -244,13 +261,14 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4">
-						<img src="louvre.jpg" class="img-rounded img-responsive">
+						<img src="canvas_jing.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
 						<img src="xuhui.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
 						<p class="langFR">
+							L'année 2009. Tu te profitais en France, et sentait la tranquillité à Douai. J'ai commencé mon prémière boulot, et appris de l'expérience de la passion, de l'éspoir, du désespoir et de la mélancolie. 
 						</p>
 						<p class="langZH">
 							2009年，妳跟小伙伴们在法国欢声笑语，感受着杜埃的那份宁静与快乐。我踌躇满志踏上了人生第一段职业历程，体会了激情，希望，伤心与失落。
@@ -264,10 +282,11 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-6">
-						<img src="apple.png" class="img-rounded img-responsive">
+						<img src="canvas_begin.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
+							L'année 2011. Tu es revenue à SJTU pour poursuivre tes études, et je courais après mon ancien rêve. Nous nous sommes retrouvés et nous avons gardé le nom de l'un et l'autre. J'ai pris mon plus grand courage pour prendre ta main dans la mienne, en poursuivant notre rêve. Chaque week-end on s'était retrouvé à SJTU dans ton labo, jouait matlab, regardait 'Mentalist' et 'Nikita', et préparait l'examen de GEM.
 						</p>
 						<p class="langZH">
 							2011年，妳回到了交大，我也回到了交大。妳继续妳的学业，我去寻找我曾经的梦想。我们再一次认识对方，拥有了彼此真正的名字。我鼓起勇气，拉起妳的手，一起踏上追梦的路程。每个周末陪着妳玩Matlab，看美剧，吃食堂，准备GEM考试。
@@ -281,10 +300,11 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-6">
-						<img src="canvas_1.jpg" class="img-rounded img-responsive">
+						<img src="canvas_grad.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
+							Enfin, diplomé! En 2012, t'avais réçu tes 3 diplomes et t'étais plus diplomé de lycéé. 
 						</p>
 						<p class="langZH">
 							2012年，陪伴妳坐在思源湖边，一起毕业。
@@ -297,17 +317,15 @@
 		<div class="slide" id="slide5">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-5">
-						<img src="paris.jpg" class="img-rounded img-responsive">
+				
+					<div class="col-md-6">
+						<img src="couple_champ.jpg" class="img-rounded img-responsive">
 					</div>
-					<div class="col-md-4">
-						<img src="galcon.jpg" class="img-rounded img-responsive">
-					</div>
-					<div class="col-md-3">
+					<div class="col-md-6">
 						<p class="langFR">
 						</p>
 						<p class="langZH">
-							2012年10月，经历过无数让我习以为常的波折后，我们成功在巴黎会师啦。
+							2012年10月，经历过无数让我习以为常的波折后，我们成功在巴黎会师啦。我们一起行走欧洲，温暖的气氛在周围荡漾。
 						</p>
 					</div>
 				</div>
@@ -316,33 +334,33 @@
 		<div class="slide" id="slide6">
 			<div class="row">
 				<div class="col-md-4">
-					<img src="canvas_3.jpg" class="img-rounded img-responsive">
+					<img src="canvas_voyage1.jpg" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-4">
-					<img src="canvas_4.jpg" class="img-rounded img-responsive">
+					<img src="canvas_voyage2.jpg" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-4">
-					<p class="langFR">
-					</p>
-					<p class="langZH">
-						2012年12月，我们开始欧洲旅行。
-					</p>
+					<img src="canvas_voyage3.jpg" class="img-rounded img-responsive">
 				</div>
+			
 			</div>
 		</div>
 		<div class="slide" id="slide7">
 			<div class="row">
-				<div class="col-md-4">
-					<img src="spain.jpg" class="img-rounded img-responsive">
+				
+				<div class="col-md-6">
+					<img src="canvas_ete.jpg" class="img-rounded img-responsive">
 				</div>
-				<div class="col-md-4">
-					<img src="canvas_2.jpg" class="img-rounded img-responsive">
-				</div>
-				<div class="col-md-4">
+				<div class="col-md-6">
 					<p class="langFR">
 					</p>
 					<p class="langZH">
-						2013年6月，我开始在图鲁兹实习，我没天坐着火车奔波与两个城市间，为了每天都能回家见到妳。
+						2013年6月，我开始在图鲁兹实习，我每天坐着火车奔波于两个城市间，为了每天都能回家见到妳。
+					</p>
+					<p class="langFR">
+					</p>
+					<p class="langZH">
+					在一个阳光明媚的午后，我向你求婚了。波光粼粼的湖上，我们相视冁然而笑。
 					</p>
 				</div>
 			</div>
@@ -350,12 +368,10 @@
 		<div class="slide" id="slide8">
 			<div class="row">
 				<div class="col-md-4">
-					<img src="jean-luc.jpg" class="img-rounded img-responsive">
+					<img src="canvas_mountain.jpg" class="img-rounded img-responsive">
 				</div>
-				<div class="col-md-4">
-					
-				</div>
-				<div class="col-md-4">
+				
+				<div class="col-md-8">
 					<p class="langFR">
 					</p>
 					<p class="langZH">
@@ -366,21 +382,20 @@
 		</div>
 		<div class="slide" id="slide9">
 			<div class="row">
-				<div class="col-md-4">
-					
-				</div>
-				<div class="col-md-4">
-					
-				</div>
-				<div class="col-md-4">
+			
+				<div class="col-md-6 col-md-offset-1">
 					<p class="langFR">
 					</p>
-					<p class="langZH">
-						未来，我们一起创造。
-					</p>
+					<h6 class="langZH"><strong>未来，我们一起创造。</strong>
+						
+					</h6>
 				</div>
 			</div>
 		</div>
+		<div class="slide" id="slide10">
+		
+		</div>
+		
 	</div>
 	<div class="section" id="section4">
 		<div class="slide" id="slide_mairie">
@@ -404,11 +419,7 @@
 						<p class="langZH"><strong>时间：</strong> 15点</p>
 						<p class="langFR"><strong>Heure：</strong> 15h00</p>
 					</div>
-					<div class="col-md-4">
-						<h4 class="langZH">Castres火车站</h4>
-						<h4 class="langFR">Gare de Catres</h4>
-						<img src="castres_gare.jpg" class="img-rounded img-responsive">
-					</div>
+				
 				</div>
 			</div>
 		</div>
@@ -472,17 +483,16 @@
 						<br>
 					</div>
 					<div class="col-md-4">
+						<img src="chateau-de-la-vere.jpg" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-4">
 						<p class="langZH"><strong>地址：</strong> 北纬 44.0040706, 东经 1.7122476</p>
 						<p class="langFR"><strong>Adresse：</strong> 44.0040706 N, 1.7122476 E</p>
 						<p class="langZH"><strong>时间：</strong> 18点</p>
 						<p class="langFR"><strong>Heure：</strong> 18h00</p>
 					</div>
-					<div class="col-md-4">
-						<img src="chateau-de-la-vere.jpg" class="img-rounded img-responsive">
-					</div>
-					<div class="col-md-4">
-						<img src="salle.jpg" class="img-rounded img-responsive">
-					</div>
+					
+					
 									
 				</div>
 			</div>
@@ -514,6 +524,11 @@
 		</div>
 	</div>
 </div>
+<div class="navbar navbar-fixed-bottom col-md-3 col-md-offset-9">
+	<h5>Designed by: Mr.&Mrs. Zhanguo.</h5>
+	<h5>Powered by: node.js, mongoDB, Openshift, JQuery, Bootstrap</h5>
+</div>
+
 <audio autoplay="true" loop="true">
 	<source src="SunnySideUp+.mp3" type="audio/mpeg">
 </audio>
