--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,7 +203,7 @@
 				
 					<img src="jingPortait.png" class="img-circle">
 					<h4 class="langFR">
-						Jing vient de Province de Hebei, Handan. Elle est dotée un prénom qui signfie "calme" en chinois mais adore bouger et les sports.
+						Jing vient de Province de Hebei, Handan. Elle est dotée un prénom qui signfie "calme" en chinois mais elle adore bouger et les sports.
 					</h4>
 					<h4 class="langZH">
 					<strong>
@@ -216,7 +216,7 @@
 				
 					<img src="haoPortait.png" class="img-circle">
 					<h4 class="langFR">
-						Hao vient de Province de Shandong, Guangrao. Il était trampé dans l'ambiance de Confucius et est bon de faire changement du "calme" au "mouvement"
+						Hao vient de Province de Shandong, Guangrao. Il était trempé dans l'ambiance de Confucius et est fort en le changement du "calme" au "mouvement"
 					</h4>
 					<h4 class="langZH">
 					<strong>
@@ -228,10 +228,10 @@
 				
 				<div class="col-md-6 col-md-offset-5">
 					<p class="langFR">
-						Nous avons vécus notre chemin ensemble pour 1500 jours.
+						Nous avons vécus notre chemin ensemble depuis 1406 jours.
 					</p>
 					<p class="langZH">
-						我们在一起已有1500天.
+						我们在一起1406天了.
 					</p>
 				</div>
 			</div>
@@ -304,7 +304,7 @@
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							Enfin, diplomé! En 2012, t'avais réçu tes 3 diplomes et t'étais plus diplomé de lycéé. 
+							Enfin, diplomé! En 2012, t'avais réçu tes 3 diplomes et t'étais plus diplomé que de lycéé. 
 						</p>
 						<p class="langZH">
 							2012年，陪伴妳坐在思源湖边，一起毕业。
@@ -323,6 +323,7 @@
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
+							Octobre 2012, après tous les revers sinueux que j'ai l'habitude, on a réussi de se rencontre à Paris! Nous avons voyagé tous les petits et les grands rues en Europe.
 						</p>
 						<p class="langZH">
 							2012年10月，经历过无数让我习以为常的波折后，我们成功在巴黎会师啦。我们一起行走欧洲，温暖的气氛在周围荡漾。
@@ -353,6 +354,10 @@
 				</div>
 				<div class="col-md-6">
 					<p class="langFR">
+						J'ai commencé mon stage à Toulouse en juin 2013. Je faisais voyage en ter pour aller à l'entreprise afin de te voir chaque jour.
+					</p>
+					<p class="langFR">
+						En plein milieu d'un lac,je t'ai demandé en mariage! Un moment inoubliable.
 					</p>
 					<p class="langZH">
 						2013年6月，我开始在图鲁兹实习，我每天坐着火车奔波于两个城市间，为了每天都能回家见到妳。
@@ -360,23 +365,21 @@
 					<p class="langFR">
 					</p>
 					<p class="langZH">
-					在一个阳光明媚的午后，我向你求婚了。波光粼粼的湖上，我们相视冁然而笑。
+						在一个阳光明媚的午后，我向你求婚了。波光粼粼的湖上，我们相视冁然而笑。
 					</p>
 				</div>
 			</div>
 		</div>
 		<div class="slide" id="slide8">
 			<div class="row">
-				<div class="col-md-4">
-					<img src="canvas_mountain.jpg" class="img-rounded img-responsive">
-				</div>
-				
-				<div class="col-md-8">
+			
+				<div class="col-md-6 col-md-offset-1">
 					<p class="langFR">
+						Bientôt, dans cette petite ville avec sa façon de la charme, moi et toi, on va entrer dans notre vie de couple en mariage.
 					</p>
-					<p class="langZH">
-						2013年7月，我们走入黑山避暑。
-					</p>
+					<h6 class="langZH">
+						马上，在这座安静而美丽的小城，我将拉着你的手进入婚姻殿堂。					
+					</h6>
 				</div>
 			</div>
 		</div>
@@ -384,10 +387,14 @@
 			<div class="row">
 			
 				<div class="col-md-6 col-md-offset-1">
-					<p class="langFR">
-					</p>
-					<h6 class="langZH"><strong>未来，我们一起创造。</strong>
-						
+					<h6 class="langFR">
+						L'histoire continue. Désormais, c'est un nouveau chapitre avec la passion et pleins d'amours!
+					</h6>
+					<h6 class="langZH">
+						我们的故事还在继续。		
+					</h6>
+					<h6 class="langZH">
+						<strong>未来，我们一起创造。</strong>
 					</h6>
 				</div>
 			</div>
@@ -482,8 +489,9 @@
 						</h1>
 						<br>
 					</div>
+					
 					<div class="col-md-4">
-						<img src="chateau-de-la-vere.jpg" class="img-rounded img-responsive">
+						<img src="chateau.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
 						<p class="langZH"><strong>地址：</strong> 北纬 44.0040706, 东经 1.7122476</p>
@@ -510,12 +518,10 @@
 						<br>
 					</div>
 					<div class="col-md-4">
-						<p class="langZH"><strong>时间：</strong> 翌日10点</p>
-						<p class="langFR"><strong>Heure：</strong> lendemain 10h00 </p>
+						<p class="langZH"><strong>时间：</strong> 翌日11点</p>
+						<p class="langFR"><strong>Heure：</strong> Dimanche le 3 mai à 11h00 </p>
 					</div>
-					<div class="col-md-4">
-						<img src="jardin.jpg" class="img-rounded img-responsive">
-					</div>
+					
 					<div class="col-md-4">
 						
 					</div>
